fix:运行及打版验证

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
-// @import '../../amis-ui/scss/functions';
-// @import '../../amis-ui/scss/variables';
-// @import '../../amis-ui/scss/helper';
-// @import './corpus-i18n';
+@import 'amis-ui/scss/functions';
+@import 'amis-ui/scss/variables';
+@import 'amis-ui/scss/helper';
+@import './corpus-i18n';
 
 $editor-default-color: #151b26; // 默认的字体色
 $editor-active-color: #2468f2;
